[package]
name = "order_manager_back"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rdkafka = { version = "0.30", features = ["tokio"] }
